Fixed display alignment for svg

--- a/P6_Data_Visualization_D3/css/style.css
+++ b/P6_Data_Visualization_D3/css/style.css
@@ -8,6 +8,13 @@ body {
 #wrapper {
     margin-left: auto;
     margin-right: auto;
+    width: 1200px;
+}
+
+#svg-wrapper svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
